--- a/index.html
+++ b/index.html
@@ -1,21 +1,54 @@
-<html>
-    <head>
-        <title>
-            Olá, Bom Dia!
-        </title>
-    </head>
-    <body>
-        <h1>h1 Boa Tarde</h1>
-        <h2>h2 Boa Noite</h2>
-    </body>
-    <ol>
-        <li>Bom Dia</li>
-        <li>Boa Tarde</li>
-        <li>Boa Noite</li>
-    </ol>
-    <ul>
-        <li>Bom Dia</li>
-        <li>Boa Tarde</li>
-        <li>Boa Noite</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Daniel Santos CV</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <div class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.png" alt="Profile image">
+                    <p class="name">Daniel Santos</p>
+                    <p class="profession">Software Engineer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 11 99999-1111</li>
+                        <li><i class="fa fa-envelope"></i>daniel@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>www.daniel.com</li>
+                        <li><i class="fa fa-github"></i>drsantos20</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Git e GitHub</p></li>
+                        <li><p>Linux</p></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá Sou o Daniel.<br>
+                        <br> Um pouco mais sobre o que faço
+                        <br> Quais são minhas competencias
+                    </p>
+                </section>
+            </div>
+        </section>
+    </main>
+</body>
 </html>
