--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Daniel Santos CV</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -30,8 +32,12 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>HTML, CSS, Git e GitHub</p></li>
-                        <li><p>Linux</p></li>
+                        <li>
+                            <p>HTML, CSS, Git e GitHub</p>
+                        </li>
+                        <li>
+                            <p>Linux</p>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -48,31 +54,57 @@
                     </p>
                 </section>
             </div>
-        <section class="experience gap">
-            <div class="right-title">Experiência</div>
-            <div class="experience-contents">
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 01</p>
-                    <p class="exp-time-name">2021-Present</p>
+            <section class="experience gap">
+                <div class="right-title">Experiência</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-name">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva aqui quais foram as principais atividades da empresa 01
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2017-2021</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva aqui quais foram as principais atividades da empresa 02
+                        </p>
+                    </div>
+            </section>
+            <section class="educaction-gap">
+                <div class="right-title">Formação Academica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">PUC</p>
+                        <p class="educationp-time-period">2021~2023</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-desc">
+                            Pós graduação em engenharia de software
+                        </p>
+                    </div>
                 </div>
-                <div class="exp-right">
-                    <p class="exp-position">Engenheiro de Software</p>
-                    <p class="exp-desc">
-                        Descreva  aqui quais foram as principais atividades da empresa 01
-                    </p>
-                </div>
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 02</p>
-                    <p class="exp-time-period">2017-2021</p>
-                </div>
-                <div class="exp-right">
-                    <p class="exp-position">Engenheiro de Software</p>
-                    <p class="exp-desc">
-                         Descreva aqui quais foram as principais atividades da empresa 02
-                    </p>              
-            </div>
-        </section>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">USP</p>
+                        <p class="educationp-time-period">2015-2016</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia da Computação</p>
+                        <p class="education-desc">
+                            Graduação em Engenharia de Software
+                        </p>
+            </section>
         </section>
     </main>
 </body>
+
 </html>
