feature: css style

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>Daniel Santos CV</title>
 
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,7 +55,7 @@
                         <br> Quais são minhas competencias
                     </p>
                 </section>
-            </div>
+ 
         <section class="experience gap">
             <div class="right-title">Experiência</div>
             <div class="experience-contents">
@@ -70,6 +78,33 @@
                     <p class="exp-desc">
                          Descreva aqui quais foram as principais atividades da empresa 02
                     </p>              
+                </div>
+            </div>
+        </section>
+        <section class="education gap">
+            <div class="right-title">Formação Academica</div>
+            <div class="education-contents">
+                <div class="education-left">
+                    <p class="education-school-name">PUC</p>
+                    <p class="educationp-time-period">2021~2023</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Engenharia de Software</p>
+                    <p class="education-desc">
+                        Pós graduação em engenharia de software
+                    </p>
+                </div>
+            </div>
+            <div class="education-contents">
+                <div class="education-left">
+                    <p class="education-school-name">USP</p>
+                    <p class="educationp-time-period">2015~2018</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Engenharia da Computação</p>
+                    <p class="education-desc">
+                        Graduação em engenharia de software
+                    </p>
                 </div>
             </div>
         </section>
